# golib-nim

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac  golib.nimble  nim.cfg.in
benchmarks/: cw_nim.nim  cw_nim.nim.cfg
src/: golib.nim
tests/: bug234.nim  peano.nim  perm.nim  select.nim  select7.nim  select_custom.go  select_custom.nim  sieve1.nim  test1.nim  test2.nim  tnew.nim
tests/gc/: bintrees.nim  closureleak.nim  cyclecollector.nim  cycleleak.nim  gcbench.nim  gcleak.nim  gcleak2.nim  gcleak3.nim  gcleak4.nim  gcleak5.nim  gctest.nim  growobjcrash.nim  refarrayleak.nim  stackrefleak.nim  weakrefs.nim
